fix top paddingleft and stats table alignment

--- a/src/content/app/species/SpeciesPage.scss
+++ b/src/content/app/species/SpeciesPage.scss
@@ -11,7 +11,7 @@
   grid-template-columns: 1fr auto;
   align-items: center;
   line-height: 1;
-  padding-left: 10px;
+  padding-left: 30px;
   padding-right: 20px;
 }
 
@@ -25,7 +25,7 @@
 .pageTitle {
   color: $blue;
   font-weight: $bold;
-  margin-left: 13px;
+  margin-left: 16px;
 }
 
 .dataForSpecies {
